Se modifíco el HTML

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,12 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
+      <h1 class="mt-5"><strong>Hola profe</strong></h1>
       <img src="./rigo-baby.jpg" />
       <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
+        Si no puede leer esto no tiene sentido que lo haya modificado jaja, pero
+        si, si puede significa que todo va en orden y puede ver los nombres
+        generados en la consola
       </p>
       <div class="fixed-bottom p-4">
         Made with ❤️ by
